clusters/homelab/apps/private-bin/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: private-bin
  namespace: private-bin
spec:
  parentRefs:
  - name: main
    namespace: envoy-gateway-system
    sectionName: https
  hostnames:
    - "secrets.nstnr.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: private-bin-privatebin
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
