clusters/homelab/apps/private-bin/security-policy.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: authentik-forward-auth
  namespace: private-bin
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: private-bin
  extAuth:
    failOpen: false
    recomputeRoute: true
    headersToExtAuth:
      - cookie
      - authorization
      - x-forwarded-proto
    http:
      backendRefs:
        - kind: Service
          name: authentik-server
          namespace: authentik
          port: 80
      path: /outpost.goauthentik.io/auth/envoy
      headersToBackend:
        - Set-Cookie
        - X-authentik-uid
        - X-authentik-username
        - X-authentik-email
        - X-authentik-groups
